# benchmarking-tools

./: ..gitignore  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: CMakeLists.txt
src/bench/: README.md  instrumentor.cpp  instrumentor.h  scope_timer.cpp  scope_timer.h
tests/: CMakeLists.txt  test_instrumentor.cpp  test_timer.cpp
tests/logs/: ScopeTimerTest.txt
